<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mn.ives.scorecleaver.DisplayFourPlayerScoreActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_stars"
        android:scaleType = "centerCrop" />

    <!--PLAYER ONE-->

    <ImageButton
        android:layout_width="250dp"
        android:layout_height="170dp"
        android:background="@drawable/player_yellow"
        android:scaleType = "centerCrop"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="-20dp"
        android:onClick="changeBackground"
        android:minHeight="90dp"
        android:minWidth="50dp" />

    <TextView
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default_score"
        android:id="@+id/playerOneScore"
        android:textSize="50sp"
        android:layout_marginBottom="75dp"
        android:textColor="@color/white"
        android:typeface="serif"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal|bottom"
        android:textAlignment="center" />

    <ImageButton
        android:layout_width="52dp"
        android:layout_height="65dp"
        android:id="@+id/playerOneHeal"
        android:background="@drawable/heal_bottom"
        android:onClick="heal"
        android:textSize="60sp"
        android:layout_gravity="center|bottom"
        android:layout_marginLeft="80dp"
        android:layout_marginBottom="10dp" />

    <ImageButton
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:id="@+id/playerOneInjure"
        android:onClick="injure"
        android:background="@drawable/injure"
        android:layout_gravity="center|bottom"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="10dp" />

    <!--PLAYER TWO-->

    <ImageButton
        android:layout_width="250dp"
        android:layout_height="170dp"
        android:background="@drawable/player_blue"
        android:scaleType="centerCrop"
        android:layout_gravity="top|center"
        android:id="@+id/imageView2"
        android:layout_marginTop="-20dp"
        android:rotation="180"
        android:onClick="changeBackground"
        android:minHeight="90dp"
        android:minWidth="50dp" />

    <TextView
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default_score"
        android:id="@+id/playerTwoScore"
        android:rotation="180"
        android:layout_marginTop="75dp"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:typeface="serif"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal|top"
        android:textAlignment="center" />

    <ImageButton
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:id="@+id/playerTwoInjure"
        android:background="@drawable/injure"
        android:onClick="injure"
        android:layout_gravity="center|top"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp" />

    <ImageButton
        android:layout_width="52dp"
        android:layout_height="65dp"
        android:id="@+id/playerTwoHeal"
        android:background="@drawable/heal_top"
        android:onClick="heal"
        android:layout_gravity="center|top"
        android:layout_marginRight="80dp"
        android:layout_marginTop="10dp"/>

    <!--PLAYER THREE-->

    <ImageButton
        android:layout_width="250dp"
        android:layout_height="170dp"
        android:background="@drawable/player_green"
        android:scaleType="centerInside"
        android:layout_gravity="left|center_vertical"
        android:rotation="90"
        android:onClick="changeBackground"
        android:minHeight="90dp"
        android:minWidth="50dp"
        android:layout_marginLeft="-40dp" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="125dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default_score"
        android:id="@+id/playerThreeScore"
        android:rotation="90"
        android:layout_marginLeft="50dp"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:typeface="serif"
        android:textStyle="bold"
        android:layout_gravity="left|center"
        android:textAlignment="center" />

    <ImageButton
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:id="@+id/playerThreeInjure"
        android:background="@drawable/injure"
        android:onClick="injure"
        android:layout_gravity="left|center"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="75dp" />

    <ImageButton
        android:layout_height="52dp"
        android:layout_width="65dp"
        android:id="@+id/playerThreeHeal"
        android:background="@drawable/heal_left"
        android:onClick="heal"
        android:layout_gravity="left|center"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="80dp"/>

    <!--PLAYER FOUR-->

    <ImageButton
        android:layout_width="250dp"
        android:layout_height="170dp"
        android:background="@drawable/player_red"
        android:scaleType="centerInside"
        android:layout_gravity="right|center_vertical"
        android:rotation="-90"
        android:onClick="changeBackground"
        android:minHeight="90dp"
        android:minWidth="50dp"
        android:layout_marginRight="-40dp" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="125dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default_score"
        android:id="@+id/playerFourScore"
        android:rotation="-90"
        android:layout_marginRight="50dp"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:typeface="serif"
        android:textStyle="bold"
        android:layout_gravity="right|center"
        android:textAlignment="center" />

    <ImageButton
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:id="@+id/playerFourInjure"
        android:background="@drawable/injure"
        android:onClick="injure"
        android:layout_gravity="right|center"
        android:layout_marginRight="15dp"
        android:layout_marginTop="75dp" />

    <ImageButton
        android:layout_height="52dp"
        android:layout_width="65dp"
        android:id="@+id/playerFourHeal"
        android:background="@drawable/heal_right"
        android:onClick="heal"
        android:layout_gravity="right|center"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="80dp"/>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_gravity="right|center_vertical">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

        </LinearLayout>

    </FrameLayout>
</FrameLayout>
