<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mn.ives.scorecleaver.SetupActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_stars"
        android:scaleType = "centerCrop"
        android:id="@+id/imageView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/starting_score_label"
        android:id="@+id/startScoreLabel"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:typeface="serif"
        android:layout_gravity="top|center"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/startScore"
        android:textSize="80sp"
        android:text="@string/default_score"
        android:textColor="@color/white"
        android:typeface="serif"
        android:layout_gravity="top|center"
        android:textAlignment="center"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/num_players_label"
        android:id="@+id/numPlayersLabel"
        android:textSize="40sp"
        android:layout_marginBottom="40dp"
        android:textColor="@color/white"
        android:typeface="serif"
        android:layout_gravity="center" />
1
    <ImageButton
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:id="@+id/twoPlayerButton"
        android:background="@drawable/start_2"
        android:layout_gravity="center"
        android:layout_marginRight="80dp"
        android:layout_marginTop="60dp"
        android:onClick="startTwoPlayerGame"/>

    <ImageButton
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:id="@+id/fourPlayerButton"
        android:background="@drawable/start_4"
        android:layout_gravity="center"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="60dp"
        android:onClick="startFourPlayerGame"/>

    <ImageButton
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:id="@+id/resumeButton"
        android:background="@drawable/resume"
        android:layout_gravity="center"
        android:layout_marginTop="190dp"
        android:onClick="resumeGame"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/resume_game_label"
        android:id="@+id/resumeLabel"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:typeface="serif"
        android:layout_gravity="center"
        android:layout_marginTop="190dp" />
</FrameLayout>
