<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mn.ives.scorecleaver.DisplayTwoPlayerScoreActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_stars"
        android:scaleType = "centerCrop" />

    <ImageButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/player_yellow"
        android:scaleType = "centerCrop"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="-20dp"
        android:onClick="changeBackground"
        android:minHeight="180dp"
        android:minWidth="100dp" />

    <ImageButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/player_blue"
        android:scaleType="centerCrop"
        android:layout_gravity="top|center"
        android:id="@+id/imageView2"
        android:layout_marginTop="-20dp"
        android:rotation="180"
        android:onClick="changeBackground"
        android:minHeight="180dp"
        android:minWidth="100dp" />

    <ImageButton
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:id="@+id/playerTwoInjure"
        android:background="@drawable/injure"
        android:onClick="injure"
        android:layout_gravity="right|top"
        android:layout_margin="20dp" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default_score"
        android:id="@+id/playerTwoScore"
        android:rotation="180"
        android:layout_marginTop="150dp"
        android:textSize="80sp"
        android:textColor="@color/white"
        android:typeface="serif"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal|top"
        android:textAlignment="center" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default_score"
        android:id="@+id/playerOneScore"
        android:textSize="80sp"
        android:layout_marginBottom="150dp"
        android:textColor="@color/white"
        android:typeface="serif"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal|bottom"
        android:textAlignment="center" />

    <ImageButton
        android:layout_width="105dp"
        android:layout_height="130dp"
        android:id="@+id/playerOneHeal"
        android:background="@drawable/heal_bottom"
        android:onClick="heal"
        android:layout_gravity="right|bottom"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />

    <ImageButton
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:id="@+id/playerOneInjure"
        android:onClick="injure"
        android:background="@drawable/injure"
        android:layout_gravity="left|bottom"
        android:layout_margin="20dp"
        android:layout_marginLeft="20dp" />

    <ImageButton
        android:layout_width="105dp"
        android:layout_height="130dp"
        android:id="@+id/playerTwoHeal"
        android:background="@drawable/heal_top"
        android:onClick="heal"
        android:layout_gravity="left|top"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_gravity="right|center_vertical">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

        </LinearLayout>

    </FrameLayout>
</FrameLayout>
